--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/PlushyShop/PlushyShop.csproj
+/PlushyShop.Domain/PlushyShop.Domain.csproj
+/PlushyShop.sln
